# Tricible

./: CMakeLists.txt  README.md
Engine/: 3x3Matrix.hpp  CMakeLists.txt  CMakeScript.py  Camera.hpp  Macros.hpp  Point3.cpp  Point3.hpp  Renderer.hpp  Tools.hpp
Engine/Color/: RGB.hpp  RGBA.hpp
Engine/Interpolation/: Interpolation.hpp
Engine/Material/: Material.hpp
Engine/Random/: RNG.hpp
Engine/Rendering/: Renderer.hpp
Engine/Resources/: CornellBoxTri.obj.mtl
Engine/Scene/: AIntersectable.cpp  AIntersectable.hpp  ALight.hpp  AObject.hpp  Camera.hpp  IntersectionInfo.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  Source.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
Engine/Texture/: Texture.hpp
Engine/Tools/: 3x3Matrix.hpp  Interpolation.cpp  Interpolation.hpp  Interpolation.tpp  Macros.hpp  Point3.hpp  RNG.cpp  RNG.hpp  RNG.tpp
GUI/: CMakeLists.txt  main.cpp
TextureGenerator/: CMakeLists.txt  ColorRGBA.hpp  Generator.cpp  GradientCollection.hpp  GradientPoint.hpp  GradientsLinear.hpp  PerlinNoise.hpp  PerlinNoise2D.hpp
TextureGenerator/Procedural1D/: Curve.cpp  Curve.hpp  OverlappedCurve.cpp  OverlappedCurve.hpp  Procedural1D.hpp
TextureGenerator/Procedural2D/: OverlappedPerlinNoise.cpp  OverlappedPerlinNoise.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Procedural2D.hpp
TextureGenerator/Utility/Gradient/: LinearGradient.hpp  PointGradient.hpp
TextureGeneratorGUI/: CMakeLists.txt  UnitTesting_Tools.cpp  UnitTesting_Tools.hpp  main.cpp
TextureGeneratorGUI/Unit Testing/: PerlinNoise.cpp  PerlinNoise.hpp
TextureGeneratorGUI/Unit_Testing/: PerlinNoise.cpp  PerlinNoise.hpp
Tools/: CMakeScript.py
